workloads/country-sql-client/yaml/v2-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: intservice-v2
  labels:
    app: intservice
    version: v2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: intservice
      version: v2
  template:
    metadata:
      labels:
        app: intservice
        version: v2
    spec:
      serviceAccountName: sash-intservice
      containers:
      - name: intservice
        image: gcr.io/sash-poc/quarkus-sql-client:v1
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080
        volumeMounts:
        - name: tmp
          mountPath: /tmp
        - name: wlp-output
          mountPath: /opt/ibm/wlp/output
      volumes:
      - name: wlp-output
        emptyDir: {}
      - name: tmp
        emptyDir: {}
