workloads/country-sql-client/yaml/manifest.yaml
##################################################################################################
# Internal service
##################################################################################################
apiVersion: v1
kind: Service
metadata:
  name: intservice
  labels:
    app: intservice
    service: intservice
spec:
  ports:
  - port: 8080
    name: http
  selector:
    app: intservice
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: intservice-v1
  labels:
    app: intservice
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: intservice
      version: v1
  template:
    metadata:
      labels:
        app: intservice
        version: v1
    spec:
      serviceAccountName: sash-account
      containers:
      - name: intservice
        image: gcr.io/sash-poc/quarkus-sql-client:v1
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080
        resources:
          limits:
            cpu: 400m
          requests:
            cpu: 200m
        volumeMounts:
        - name: tmp
          mountPath: /tmp
        - name: wlp-output
          mountPath: /opt/ibm/wlp/output
      volumes:
      - name: wlp-output
        emptyDir: {}
      - name: tmp
        emptyDir: {}
---
