workloads/country-sql-client/yaml/destionation.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: country
spec:
  host: intservice
  trafficPolicy:
    loadBalancer:
      simple: RANDOM
  subsets:
  - name: v1
    labels:
      version: v1
  - name: v2
    labels:
      version: v2
