workloads/country-sql-client/yaml/instio-ingress.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: countries-orm-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: country-orm
spec:
  hosts:
  - "*"
  gateways:
  - countries-orm-gateway
  http:
  - match:
    - uri:
        exact: /countries
    - uri:
        prefix: /static
    - uri:
        exact: /health
    - uri:
        exact: /logout
    - uri:
        prefix: /api/v1/products
    route:
    - destination:
        host: intservice
        port:
          number: 8080
